--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 <body>
     
     <div class="buttons">
-        <img src="logo.jpg" width="200" ><img/>
+        <img src="logo.jpg" width="100" ><img/>
         <a href="./home.html" class="button">Home</a>
         <a href="./Book_listro.html" class="button">Book a Listro</a> </button>
         <a href="./join.html" class="button">Join</a>
@@ -22,6 +22,19 @@
             Not only will we bring your shoes back to life, but we also offer convenient pickup and delivery options to make the process as easy as possible for you. Plus, our affordable prices can't be beat.
             Don't settle for scuffed up shoes any longer. Schedule an appointment and see the difference our shoe shining organization can make for you!</p1>
     </div>
+    <div class="home_info">
+        <p1> Services: </p1>
+    </div>
+    <div class="Services">
+        <p1> Shoe Shining </p1>
+    </div>
+    <div class="Services">
+        <p1> Shoe Repair </p1>
+    </div>
+    <div class="Services">
+        <p1> Deep Wash </p1>
+    </div>
+    
     <div class="home_image">
         <img src="Home_listro.jpg"><img/>
         <img src="home2.jpg"><img/>
