--- a/our_team.html
+++ b/our_team.html
@@ -23,7 +23,9 @@
 <a href="https://t.me/tewobistya">Tewobistya</a>
 <img src="Anteneh2.png" alt="thinking" width="200" height="200">
 <a href="https://www.linkedin.com/in/anteneh-yimmam-581ba4250/">Anteneh</a>
+
     </div>
+    <img src="teampic.jpg"><img/>
 </body>
 
 </html>
